2011-08-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* pdebuild.xml: Created new target copyDeps.
	Pass property copyfiles to Symlink tasks.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkJars.java: New.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkInstalledOSGiJars.java:
	Extend SymlinkJars.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkOSGiJars.java: Ditto.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkNonOSGiJars.java: Ditto.

2011-08-09  Niels Thykier  <niels@thykier.net>

	Bug #322271

	* pdebuild/eclipse-pdebuild.sh: Pass JVM arguments directly to the VM and
	pass -data to avoid using the user's real workspace.

2011-08-05  Niels Thykier  <niels@thykier.net>

	* build.xml: Re-enabled four patches for adding extra architectures to eclipse.
	* patches/donotstorebuildlogsinfiles.patch: Refreshed to apply cleanly.
	* patches/eclipse-add-archs-executable.patch: Ditto
	* patches/eclipse-add-archs-filesystem.patch: Ditto
	* patches/eclipse-add-archs-swt.patch: Ditto
	* patches/eclipse-add-ppc64-sparc64-s390-s390x.patch: Ditto
	* patches/eclipse-addArchesAnd64bitSWT.patch: Ditto
	* patches/eclipse-buildswtnatives.patch: Ditto
	* patches/eclipse-no-jetty5.patch: Ditto
	* patches/eclipse-swt-buildagainstxulrunner.patch: Ditto, though this patch
	was not re-enabled.

2011-08-02  Sami Wagiaalla  <swagiaal@redhat.com>

	* build.xml: Check if eclipse-build-config and eclipse-build-feature are present
	before creating symlinks.

2011-07-22  Sami Wagiaalla  <swagiaal@redhat.com>

	* build.xml: Automatically create symbolic links in the build directory
	to  eclipse-build-config eclipse-build-feature

2011-07-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkInstalledOSGiJars.java (execute):
	Trim file names before constructing file objects.
	* task-src/org/eclipse/linuxtools/eclipsebuild/SymlinkOSGiJars.java (execute): Ditto.